<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="beaconstrips.clips.client.viewcontroller.authentication.LoginActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:hint="@string/email"
            android:id="@+id/email_login" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/password"
            android:id="@+id/password_login"
            android:maxLength="16" />
    </android.support.design.widget.TextInputLayout>

    <Button
        style="@style/RaisedButton"
        android:layout_marginTop="50dp"
        android:text="@string/login"
        android:id="@+id/login_button"
        android:layout_gravity="center_horizontal" />


    <Button
        style="@style/RaisedButton"
        android:layout_marginTop="50dp"
        android:text="@string/forgot_password"
        android:id="@+id/forgot_password_button"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
