<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="beaconstrips.clips.client.viewcontroller.building.PathActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:id="@+id/nameLabel"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="20dp" />

    <LinearLayout
        android:id="@+id/pathDescription"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/nameLabel">

        <TextView
            android:id="@+id/descriptionLabel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/path_description_label"
            android:layout_gravity="left"
            android:paddingBottom="20dp" />

        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="right"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pathTarget"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/pathDescription">

    <TextView
        android:id="@+id/targetLabel"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/target"
        android:layout_gravity="left"
        android:paddingBottom="20dp" />

    <TextView
        android:id="@+id/target"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_gravity="right"
        />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pathDuration"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/pathTarget">

        <TextView
            android:id="@+id/durationLabel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/duration"
            android:layout_gravity="left"
            android:paddingBottom="20dp" />

        <TextView
            android:id="@+id/duration"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="right"
            />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Inizia percorso"
        android:id="@+id/startButton"
        android:layout_below="@+id/pathDuration"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
